--- a/index.html
+++ b/index.html
@@ -10,10 +10,21 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="mobile-web-app-capable" content="yes">
     <title>
-        📄 Ping. - HackMD
+        📄 Ping. Doc.
     </title>
-    <link rel="icon" type="image/png" href="https://hackmd.io/favicon.png">
-    <link rel="apple-touch-icon" href="https://hackmd.io/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="57x57" href="https://senar.meuping.io/assets/apple-icon-57x57-784c0f9bae895df62d54ffbe743392c01056c068dfd68e97e64c50b91632a617.png" />
+<link rel="apple-touch-icon" sizes="60x60" href="https://senar.meuping.io/assets/apple-icon-60x60-944ed65a6ce575f8137cd343d7d91578a474d5e8a2659416fa20617ecc2c28fe.png" />
+<link rel="apple-touch-icon" sizes="72x72" href="https://senar.meuping.io/assets/apple-icon-72x72-1fd69a367ff4e3afed243173600c30e31a1a633370ace631ca6decdddc6b2dd9.png" />
+<link rel="apple-touch-icon" sizes="76x76" href="https://senar.meuping.io/assets/apple-icon-76x76-8556c94889a4233f49142fce62cfa75206295b42efce5a759843ad8179551a5d.png" />
+<link rel="apple-touch-icon" sizes="114x114" href="https://senar.meuping.io/assets/apple-icon-114x114-08ad3642799876653e89c16675f26da32992058b412cf450b0605f61a1a3dc8d.png" />
+<link rel="apple-touch-icon" sizes="120x120" href="https://senar.meuping.io/assets/apple-icon-120x120-c5135ddf231912d6bd525b93dec9f359127ec152cccf9dda78ff7c454b6023a5.png" />
+<link rel="apple-touch-icon" sizes="144x144" href="https://senar.meuping.io/assets/apple-icon-144x144-44dbedc503ef80703cdecc9e00767557cafe5f24ce119dff64f1fcd3065c7ee6.png" />
+<link rel="apple-touch-icon" sizes="152x152" href="https://senar.meuping.io/assets/apple-icon-152x152-4036aef129a55b041754224459260d29fa6e815af6e5a12a73aa9b2aab7e57a8.png" />
+<link rel="apple-touch-icon" sizes="180x180" href="https://senar.meuping.io/assets/apple-icon-180x180-1b82d65c9ac444546682c9d229e66d365cc64ee71adb244779d11e0a4f9d4f9b.png" />
+<link rel="icon" type="image/png" sizes="192x192" href="https://senar.meuping.io/assets/android-icon-192x192-07887ff31eb4cde84e0c6bf3844db0a126128938b69abff2ab78562bcbe5759e.png" />
+<link rel="icon" type="image/png" sizes="32x32" href="https://senar.meuping.io/assets/favicon-32x32-7de678f7b7070ab3aa5b66d21aa29623fc7d578cc656bb90a683dbbc03dc5b8c.png" />
+<link rel="icon" type="image/png" sizes="96x96" href="https://senar.meuping.io/assets/favicon-96x96-50296db739c94bdb3be9103d59a23f624f90662a46ce615c2421fda0f89be50d.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="https://senar.meuping.io/assets/favicon-16x16-a8cffbfb6d4504ff29e64ba0d99d19a37d9dee189c4d25d875f7e30d4e39e89e.png" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
